Fix white box from residual overflow scroll

--- a/client/src/styles/account.module.css
+++ b/client/src/styles/account.module.css
@@ -69,7 +69,6 @@
 
 .sectionBox {
 	margin-top: 50px;
-	overflow: scroll;
 }
 
 .settingBox {
